<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#ffffff"
        >
    <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/intro_logo"
            android:src="@drawable/intro_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="51dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/intro_logo_description"/>

    <es.concertsapp.android.component.LetterSpacingTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan_text"
            android:id="@+id/text_slogan"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="11dp"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/intro_logo"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_shows"
            android:textSize="32sp"
            android:textColor="@drawable/button_shows_bands_textcolor"
            android:id="@+id/buttonConciertos"
            android:background="@drawable/intro_mancha1"
            android:layout_marginTop="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/text_slogan"
            android:paddingBottom="2dp"
            android:layout_centerHorizontal="true"/>
    <ImageView
            android:id="@+id/puntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/intro_puntos"
            android:contentDescription="@string/puntos_description"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/buttonConciertos"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_bands"
            android:id="@+id/buttonGrupos"
            android:textSize="32sp"
            android:textColor="@drawable/button_shows_bands_textcolor"
            android:background="@drawable/intro_mancha2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/puntos"
            android:layout_centerHorizontal="true"/>

    <!--<ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastfm"
            android:background="@drawable/lastfmicon"
            android:contentDescription="@string/lastfm_description"/>-->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:orientation="horizontal"
            android:id="@+id/iniciopie"
            android:background="#4d4d4d"
            android:layout_alignParentBottom="true"
            >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_configuration"
            android:layout_marginLeft="3dp"
            android:background="@drawable/button_configurationbackground"
            android:contentDescription="@string/button_configuration" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_logolastfm"
                android:background="@drawable/button_lastfmbackground"
                android:layout_marginRight="6dp"
                android:contentDescription="@string/button_lastfm_description" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_moshtown"
                android:background="@drawable/button_moshtownbackground"
                android:layout_marginRight="6dp"
                android:contentDescription="@string/button_moshtown_description" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>