<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/add_event_title"
            android:textColor="@color/black"
            android:id="@+id/add_event_title_textview"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            />
    <TextView
        android:id="@+id/add_event_info_textview"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="14sp"
        android:text="@string/add_event_info"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/add_event_link_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:text="@string/add_event_link"
        android:textColor="@color/white"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/mancha_barra"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:orientation="horizontal"
        android:id="@+id/iniciopie"
        android:background="@color/gray2"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:id="@+id/button_configuration"
            android:background="@drawable/button_configurationbackground"
            android:contentDescription="@string/button_configuration" />
    </RelativeLayout>
</LinearLayout>