<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="32dp"
    android:orientation="horizontal"
    android:id="@+id/iniciopie"
    android:background="#4d4d4d"
    >
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_configuration"
        android:layout_marginLeft="3dp"
        android:background="@drawable/button_configurationbackground"
        android:contentDescription="@string/button_configuration" />
    <ProgressBar
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbarcommon"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/button_configuration"
        android:layout_marginLeft="6dp"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_logolastfm"
        android:background="@drawable/button_lastfmbackground"
        android:layout_marginRight="6dp"
        android:contentDescription="@string/button_lastfm_description"
        android:layout_toLeftOf="@+id/button_moshtown"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_moshtown"
        android:background="@drawable/button_moshtownbackground"
        android:layout_marginRight="6dp"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/button_moshtown_description"/>
</RelativeLayout>